--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 /node_modules
 
 # Environments
-/src/environments
+/src/environments/environment.prod.ts
+/src/environments/environment.ts
 
 # profiling files
 chrome-profiler-events*.json
