--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.0-beta2",
     "ngx-dropzone": "^3.0.0",
     "rxjs": "~6.6.0",
