Readme and package updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elysian-frontend",
+  "name": "products-app-frontend",
   "version": "0.0.0",
   "author": "david940103@gmail.com",
   "scripts": {
